src/entdlr/parser/grammar/generated/flatbuffers/FlatBuffersParser.cpp

// Generated from FlatBuffersParser.g4 by ANTLR 4.9.1


#include "FlatBuffersParserListener.h"
#include "FlatBuffersParserVisitor.h"

#include "FlatBuffersParser.h"


using namespace antlrcpp;
using namespace antlr4;

FlatBuffersParser::FlatBuffersParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FlatBuffersParser::~FlatBuffersParser() {
  delete _interpreter;
}

std::string FlatBuffersParser::getGrammarFileName() const {
  return "FlatBuffersParser.g4";
}

const std::vector<std::string>& FlatBuffersParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FlatBuffersParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- SchemaContext ------------------------------------------------------------------

FlatBuffersParser::SchemaContext::SchemaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<FlatBuffersParser::IncludeContext *> FlatBuffersParser::SchemaContext::include() {
  return getRuleContexts<FlatBuffersParser::IncludeContext>();
}

FlatBuffersParser::IncludeContext* FlatBuffersParser::SchemaContext::include(size_t i) {
  return getRuleContext<FlatBuffersParser::IncludeContext>(i);
}

std::vector<FlatBuffersParser::Namespace_declContext *> FlatBuffersParser::SchemaContext::namespace_decl() {
  return getRuleContexts<FlatBuffersParser::Namespace_declContext>();
}

FlatBuffersParser::Namespace_declContext* FlatBuffersParser::SchemaContext::namespace_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Namespace_declContext>(i);
}

std::vector<FlatBuffersParser::Type_declContext *> FlatBuffersParser::SchemaContext::type_decl() {
  return getRuleContexts<FlatBuffersParser::Type_declContext>();
}

FlatBuffersParser::Type_declContext* FlatBuffersParser::SchemaContext::type_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Type_declContext>(i);
}

std::vector<FlatBuffersParser::Enum_declContext *> FlatBuffersParser::SchemaContext::enum_decl() {
  return getRuleContexts<FlatBuffersParser::Enum_declContext>();
}

FlatBuffersParser::Enum_declContext* FlatBuffersParser::SchemaContext::enum_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Enum_declContext>(i);
}

std::vector<FlatBuffersParser::Union_declContext *> FlatBuffersParser::SchemaContext::union_decl() {
  return getRuleContexts<FlatBuffersParser::Union_declContext>();
}

FlatBuffersParser::Union_declContext* FlatBuffersParser::SchemaContext::union_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Union_declContext>(i);
}

std::vector<FlatBuffersParser::Root_declContext *> FlatBuffersParser::SchemaContext::root_decl() {
  return getRuleContexts<FlatBuffersParser::Root_declContext>();
}

FlatBuffersParser::Root_declContext* FlatBuffersParser::SchemaContext::root_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Root_declContext>(i);
}

std::vector<FlatBuffersParser::File_extension_declContext *> FlatBuffersParser::SchemaContext::file_extension_decl() {
  return getRuleContexts<FlatBuffersParser::File_extension_declContext>();
}

FlatBuffersParser::File_extension_declContext* FlatBuffersParser::SchemaContext::file_extension_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::File_extension_declContext>(i);
}

std::vector<FlatBuffersParser::File_identifier_declContext *> FlatBuffersParser::SchemaContext::file_identifier_decl() {
  return getRuleContexts<FlatBuffersParser::File_identifier_declContext>();
}

FlatBuffersParser::File_identifier_declContext* FlatBuffersParser::SchemaContext::file_identifier_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::File_identifier_declContext>(i);
}

std::vector<FlatBuffersParser::Attribute_declContext *> FlatBuffersParser::SchemaContext::attribute_decl() {
  return getRuleContexts<FlatBuffersParser::Attribute_declContext>();
}

FlatBuffersParser::Attribute_declContext* FlatBuffersParser::SchemaContext::attribute_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Attribute_declContext>(i);
}

std::vector<FlatBuffersParser::Rpc_declContext *> FlatBuffersParser::SchemaContext::rpc_decl() {
  return getRuleContexts<FlatBuffersParser::Rpc_declContext>();
}

FlatBuffersParser::Rpc_declContext* FlatBuffersParser::SchemaContext::rpc_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Rpc_declContext>(i);
}

std::vector<FlatBuffersParser::Interface_declContext *> FlatBuffersParser::SchemaContext::interface_decl() {
  return getRuleContexts<FlatBuffersParser::Interface_declContext>();
}

FlatBuffersParser::Interface_declContext* FlatBuffersParser::SchemaContext::interface_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Interface_declContext>(i);
}

std::vector<FlatBuffersParser::ObjectContext *> FlatBuffersParser::SchemaContext::object() {
  return getRuleContexts<FlatBuffersParser::ObjectContext>();
}

FlatBuffersParser::ObjectContext* FlatBuffersParser::SchemaContext::object(size_t i) {
  return getRuleContext<FlatBuffersParser::ObjectContext>(i);
}

std::vector<tree::TerminalNode *> FlatBuffersParser::SchemaContext::BLOCK_COMMENT() {
  return getTokens(FlatBuffersParser::BLOCK_COMMENT);
}

tree::TerminalNode* FlatBuffersParser::SchemaContext::BLOCK_COMMENT(size_t i) {
  return getToken(FlatBuffersParser::BLOCK_COMMENT, i);
}


size_t FlatBuffersParser::SchemaContext::getRuleIndex() const {
  return FlatBuffersParser::RuleSchema;
}

void FlatBuffersParser::SchemaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSchema(this);
}

void FlatBuffersParser::SchemaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSchema(this);
}


antlrcpp::Any FlatBuffersParser::SchemaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlatBuffersParserVisitor*>(visitor))
    return parserVisitor->visitSchema(this);
  else
    return visitor->visitChildren(this);
}

FlatBuffersParser::SchemaContext* FlatBuffersParser::schema() {
  SchemaContext *_localctx = _tracker.createInstance<SchemaContext>(_ctx, getState());
  enterRule(_localctx, 0, FlatBuffersParser::RuleSchema);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FlatBuffersParser::INCLUDE) {
      setState(78);
      include();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FlatBuffersParser::NAMESPACE)
      | (1ULL << FlatBuffersParser::ATTRIBUTE)
      | (1ULL << FlatBuffersParser::TABLE)
      | (1ULL << FlatBuffersParser::STRUCT)
      | (1ULL << FlatBuffersParser::ENUM)
      | (1ULL << FlatBuffersParser::UNION)
      | (1ULL << FlatBuffersParser::INTERFACE)
      | (1ULL << FlatBuffersParser::ROOT_TYPE)
      | (1ULL << FlatBuffersParser::RPC_SERVICE)
      | (1ULL << FlatBuffersParser::FILE_EXTENSION)
      | (1ULL << FlatBuffersParser::FILE_IDENTIFIER)
      | (1ULL << FlatBuffersParser::BLOCK_COMMENT)
      | (1ULL << FlatBuffersParser::DOC_COMMENT)
      | (1ULL << FlatBuffersParser::OPEN_BRACE))) != 0)) {
      setState(96);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(84);
        namespace_decl();
        break;
      }

      case 2: {
        setState(85);
        type_decl();
        break;
      }

      case 3: {
        setState(86);
        enum_decl();
        break;
      }

      case 4: {
        setState(87);
        union_decl();
        break;
      }

      case 5: {
        setState(88);
        root_decl();
        break;
      }

      case 6: {
        setState(89);
        file_extension_decl();
        break;
      }

      case 7: {
        setState(90);
        file_identifier_decl();
        break;
      }

      case 8: {
        setState(91);
        attribute_decl();
        break;
      }

      case 9: {
        setState(92);
        rpc_decl();
        break;
      }

      case 10: {
        setState(93);
        interface_decl();
        break;
      }

      case 11: {
        setState(94);
        object();
        break;
      }

      case 12: {
        setState(95);
        match(FlatBuffersParser::BLOCK_COMMENT);
        break;
      }

      default:
        break;
      }
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

FlatBuffersParser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlatBuffersParser::IncludeContext::INCLUDE() {
  return getToken(FlatBuffersParser::INCLUDE, 0);
}

tree::TerminalNode* FlatBuffersParser::IncludeContext::STRING_CONSTANT() {
  return getToken(FlatBuffersParser::STRING_CONSTANT, 0);
}

tree::TerminalNode* FlatBuffersParser::IncludeContext::SEMICOLON() {
  return getToken(FlatBuffersParser::SEMICOLON, 0);
}


size_t FlatBuffersParser::IncludeContext::getRuleIndex() const {
  return FlatBuffersParser::RuleInclude;
}

void FlatBuffersParser::IncludeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInclude(this);
}

void FlatBuffersParser::IncludeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInclude(this);
}


antlrcpp::Any FlatBuffersParser::IncludeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlatBuffersParserVisitor*>(visitor))
    return parserVisitor->visitInclude(this);
  else
    return visitor->visitChildren(this);
}

FlatBuffersParser::IncludeContext* FlatBuffersParser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 2, FlatBuffersParser::RuleInclude);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(FlatBuffersParser::INCLUDE);
    setState(102);
    match(FlatBuffersParser::STRING_CONSTANT);
    setState(103);
    match(FlatBuffersParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Namespace_declContext ------------------------------------------------------------------

FlatBuffersParser::Namespace_declContext::Namespace_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlatBuffersParser::Namespace_declContext::NAMESPACE() {
  return getToken(FlatBuffersParser::NAMESPACE, 0);
}

std::vector<tree::TerminalNode *> FlatBuffersParser::Namespace_declContext::IDENT() {
  return getTokens(FlatBuffersParser::IDENT);
}

tree::TerminalNode* FlatBuffersParser::Namespace_declContext::IDENT(size_t i) {
  return getToken(FlatBuffersParser::IDENT, i);
}

tree::TerminalNode* FlatBuffersParser::Namespace_declContext::SEMICOLON() {
  return getToken(FlatBuffersParser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> FlatBuffersParser::Namespace_declContext::PERIOD() {
  return getTokens(FlatBuffersParser::PERIOD);
}

tree::TerminalNode* FlatBuffersParser::Namespace_declContext::PERIOD(size_t i) {
  return getToken(FlatBuffersParser::PERIOD, i);
}


size_t FlatBuffersParser::Namespace_declContext::getRuleIndex() const {
  return FlatBuffersParser::RuleNamespace_decl;
}

void FlatBuffersParser::Namespace_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNamespace_decl(this);
}

void FlatBuffersParser::Namespace_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNamespace_decl(this);
}


antlrcpp::Any FlatBuffersParser::Namespace_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlatBuffersParserVisitor*>(visitor))
    return parserVisitor->visitNamespace_decl(this);
  else
    return visitor->visitChildren(this);
}

FlatBuffersParser::Namespace_declContext* FlatBuffersParser::namespace_decl() {
  Namespace_declContext *_localctx = _tracker.createInstance<Namespace_declContext>(_ctx, getState());
  enterRule(_localctx, 4, FlatBuffersParser::RuleNamespace_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(FlatBuffersParser::NAMESPACE);
    setState(106);
    match(FlatBuffersParser::IDENT);
    setState(111);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FlatBuffersParser::PERIOD) {
      setState(107);
      match(FlatBuffersParser::PERIOD);
      setState(108);
      match(FlatBuffersParser::IDENT);
      setState(113);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(114);
    match(FlatBuffersParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_declContext ------------------------------------------------------------------

FlatBuffersParser::Attribute_declContext::Attribute_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlatBuffersParser::Attribute_declContext::ATTRIBUTE() {
  return getToken(FlatBuffersParser::ATTRIBUTE, 0);
}

tree::TerminalNode* FlatBuffersParser::Attribute_declContext::STRING_CONSTANT() {
  return getToken(FlatBuffersParser::STRING_CONSTANT, 0);
}

tree::TerminalNode* FlatBuffersParser::Attribute_declContext::SEMICOLON() {
  return getToken(FlatBuffersParser::SEMICOLON, 0);
}


size_t FlatBuffersParser::Attribute_declContext::getRuleIndex() const {
  return FlatBuffersParser::RuleAttribute_decl;
}

void FlatBuffersParser::Attribute_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute_decl(this);
}

void FlatBuffersParser::Attribute_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute_decl(this);
}


antlrcpp::Any FlatBuffersParser::Attribute_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlatBuffersParserVisitor*>(visitor))
    return parserVisitor->visitAttribute_decl(this);
  else
    return visitor->visitChildren(this);
}

FlatBuffersParser::Attribute_declContext* FlatBuffersParser::attribute_decl() {
  Attribute_declContext *_localctx = _tracker.createInstance<Attribute_declContext>(_ctx, getState());
  enterRule(_localctx, 6, FlatBuffersParser::RuleAttribute_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(FlatBuffersParser::ATTRIBUTE);
    setState(117);
    match(FlatBuffersParser::STRING_CONSTANT);
    setState(118);
    match(FlatBuffersParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_declContext ------------------------------------------------------------------

FlatBuffersParser::Type_declContext::Type_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::IDENT() {
  return getToken(FlatBuffersParser::IDENT, 0);
}

FlatBuffersParser::MetadataContext* FlatBuffersParser::Type_declContext::metadata() {
  return getRuleContext<FlatBuffersParser::MetadataContext>(0);
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::OPEN_BRACE() {
  return getToken(FlatBuffersParser::OPEN_BRACE, 0);
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::CLOSE_BRACE() {
  return getToken(FlatBuffersParser::CLOSE_BRACE, 0);
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::TABLE() {
  return getToken(FlatBuffersParser::TABLE, 0);
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::STRUCT() {
  return getToken(FlatBuffersParser::STRUCT, 0);
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::BLOCK_COMMENT() {
  return getToken(FlatBuffersParser::BLOCK_COMMENT, 0);
}

tree::TerminalNode* FlatBuffersParser::Type_declContext::DOC_COMMENT() {
  return getToken(FlatBuffersParser::DOC_COMMENT, 0);
}

std::vector<FlatBuffersParser::Field_declContext *> FlatBuffersParser::Type_declContext::field_decl() {
  return getRuleContexts<FlatBuffersParser::Field_declContext>();
}

FlatBuffersParser::Field_declContext* FlatBuffersParser::Type_declContext::field_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Field_declContext>(i);
}

std::vector<FlatBuffersParser::Method_declContext *> FlatBuffersParser::Type_declContext::method_decl() {
  return getRuleContexts<FlatBuffersParser::Method_declContext>();
}

FlatBuffersParser::Method_declContext* FlatBuffersParser::Type_declContext::method_decl(size_t i) {
  return getRuleContext<FlatBuffersParser::Method_declContext>(i);
}


size_t FlatBuffersParser::Type_declContext::getRuleIndex() const {
  return FlatBuffersParser::RuleType_decl;
}

void FlatBuffersParser::Type_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType_decl(this);
}

void FlatBuffersParser::Type_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType_decl(this);
}


antlrcpp::Any FlatBuffersParser::Type_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlatBuffersParserVisitor*>(visitor))
    return parserVisitor->visitType_decl(this);
  else
    return visitor->visitChildren(this);
}

FlatBuffersParser::Type_declContext* FlatBuffersParser::type_decl() {
  Type_declContext *_localctx = _tracker.createInstance<Type_declContext>(_ctx, getState());
  enterRule(_localctx, 8, FlatBuffersParser::RuleType_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FlatBuffersParser::BLOCK_COMMENT) {
      setState(120);
      match(FlatBuffersParser::BLOCK_COMMENT);
    }
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FlatBuffersParser::DOC_COMMENT) {
      setState(123);
      match(FlatBuffersParser::DOC_COMMENT);
    }
    setState(126);
    _la = _input->LA(1);
    if (!(_la == FlatBuffersParser::TABLE

    || _la == FlatBuffersParser::STRUCT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(127);
    match(FlatBuffersParser::IDENT);
    setState(128);
    metadata();
    setState(129);
    match(FlatBuffersParser::OPEN_BRACE);
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FlatBuffersParser::MUTABLE)
      | (1ULL << FlatBuffersParser::STATIC)
      | (1ULL << FlatBuffersParser::IDENT)
      | (1ULL << FlatBuffersParser::BLOCK_COMMENT))) != 0)) {
      setState(132);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
      case 1: {
        setState(130);
        field_decl();
        break;
      }

      case 2: {
        setState(131);
        method_decl();
        break;
      }

      default:
        break;
      }
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(137);
    match(FlatBuffersParser::CLOSE_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Enum_declContext ------------------------------------------------------------------

FlatBuffersParser::Enum_declContext::Enum_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::ENUM() {
  return getToken(FlatBuffersParser::ENUM, 0);
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::IDENT() {
  return getToken(FlatBuffersParser::IDENT, 0);
}

FlatBuffersParser::MetadataContext* FlatBuffersParser::Enum_declContext::metadata() {
  return getRuleContext<FlatBuffersParser::MetadataContext>(0);
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::OPEN_BRACE() {
  return getToken(FlatBuffersParser::OPEN_BRACE, 0);
}

FlatBuffersParser::Commasep_enumval_declContext* FlatBuffersParser::Enum_declContext::commasep_enumval_decl() {
  return getRuleContext<FlatBuffersParser::Commasep_enumval_declContext>(0);
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::CLOSE_BRACE() {
  return getToken(FlatBuffersParser::CLOSE_BRACE, 0);
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::BLOCK_COMMENT() {
  return getToken(FlatBuffersParser::BLOCK_COMMENT, 0);
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::DOC_COMMENT() {
  return getToken(FlatBuffersParser::DOC_COMMENT, 0);
}

tree::TerminalNode* FlatBuffersParser::Enum_declContext::COLON() {
  return getToken(FlatBuffersParser::COLON, 0);
}

FlatBuffersParser::TypeContext* FlatBuffersParser::Enum_declContext::type() {
  return getRuleContext<FlatBuffersParser::TypeContext>(0);
}


size_t FlatBuffersParser::Enum_declContext::getRuleIndex() const {
  return FlatBuffersParser::RuleEnum_decl;
}

void FlatBuffersParser::Enum_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnum_decl(this);
}

void FlatBuffersParser::Enum_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FlatBuffersParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnum_decl(this);
}


antlrcpp::Any FlatBuffersParser::Enum_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FlatBuffersParserVisitor*>(visitor))
    return parserVisitor->visitEnum_decl(this);
  else
    return visitor->visitChildren(this);
}

FlatBuffersParser::Enum_declContext* FlatBuffersParser::enum_decl() {
  Enum_declContext *_localctx = _tracker.createInstance<Enum_declContext>(_ctx, getState());
  enterRule(_localctx, 10, FlatBuffersParser::RuleEnum_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FlatBuffersParser::BLOCK_COMMENT) {
      setState(139);
      match(FlatBuffersParser::BLOCK_COMMENT);
    }
    setState(143);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FlatBuffersParser::DOC_COMMENT) {
      setState(142);
      match(FlatBuffersParser::DOC_COMMENT);
    }
    setState(145);
    match(FlatBuffersParser::ENUM);
    setState(146);
    match(FlatBuffersParser::IDENT);
    setState(149);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FlatBuffersParser::COLON) {
      setState(147);
      match(FlatBuffersParser::COLON);
      setState(148);
      type();
    }
    setState(151);
    metadata();
    setState(152);
    match(FlatBuffersParser::OPEN_BRACE);
    setState(153);
    commasep_enumval_decl();
    setState(154);
    match(FlatBuffersParser::CLOSE_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Union_declContext ------------------------------------------------------------------

FlatBuffersParser::Union_declContext::Union_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FlatBuffersParser::Union_declContext::UNION() {
  return getToken(FlatBuffersParser::UNION, 0);
}

tree::TerminalNode* FlatBuffersParser::Union_declContext::IDENT() {
  return getToken(FlatBuffersParser::IDENT, 0);
}

FlatBuffersParser::MetadataContext* FlatBuffersParser::Union_declContext::metadata() {
  return getRuleContext<FlatBuffersParser::MetadataContext>(0);
}

tree::TerminalNode* FlatBuffersParser::Union_declContext::OPEN_BRACE() {
  return getToken(FlatBuffersParser::OPEN_BRACE, 0);
}

FlatBuffersParser::Commasep_uniontype_declContext* FlatBuffersParser::Union_declContext::commasep_uniontype_decl() {
  return getRuleContext<FlatBuffersParser::Commasep_uniontype_declContext>(0);
}

tree::TerminalNode* FlatBuffersParser::Union_declContext::CLOSE_BRACE() {
  return getToken(FlatBuffersParser::CLOSE_BRACE, 0);
}

tree::TerminalNode* FlatBuffersParser::Union_declContext::BLOCK_COMMENT() {
  return getToken(FlatBuffersParser::BLOCK_COMMENT, 0);
}

tree::TerminalNode* FlatBuffersParser::Union_declContext::DOC_COMMENT() {
  return getToken(FlatBuffersParser::DOC_COMMENT, 0);
}

